--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ hpack==4.1.0
 httpcore==0.16.3
 httplib2==0.22.0
 hyperframe==6.1.0
+httpx==0.23.3
 idna==3.10
 importlib_metadata==8.7.0
 invoke==1.7.3
@@ -61,7 +62,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-gitlab==3.15.0
 python-semantic-release==7.33.2
-python-telegram-bot==20.3
+python-telegram-bot==20.1
 pywin32-ctypes==0.2.3
 readme_renderer==44.0
 realtime==1.0.6
