--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ more-itertools==10.7.0
 nh3==0.2.21
 outcome==1.3.0.post0
 packaging==25.0
+paypalrestsdk==1.13.1
 pillow==11.3.0
 pkginfo==1.12.1.2
 postgrest==0.10.7
