FINAL PRODUCTION BOT - Beautiful UI, Always Works, English Interface - Beautiful English UI with emojis - ALWAYS responds to /start on ANY device - No ConversationHandler complexity - Simple state management - Filter system (cheapest, expensive, top 3, top 5) - Feedback notifications to admin - Help menu - Clean, professional design - Works 24/7 even when you logout - Auto-restart on crash - Updated service file to use bot_final.py

--- a/indicome-bot.service
+++ b/indicome-bot.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/root/Indicome
-ExecStart=/root/Indicome/venv/bin/python3 /root/Indicome/main.py
+ExecStart=/root/Indicome/venv/bin/python3 /root/Indicome/bot_final.py
 
 # Auto-restart on crash
 Restart=always
